fixed spacing in css

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
           </div>
     </header>
-    <div class = "container body-container">
+    <div class = "body-container">
         <div class= "nav-container">
             <nav class="navbar navbar-light bg-light">
                 <form class="form-inline">
