updates to styling for visual spacing of elements

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Dashboard</title>
+    <title>Your Weather Dashboard: Weather that's important for you</title>
     <link rel="stylesheet" href="Assets/CSS/reset.css">
     <link
       rel="stylesheet"
@@ -16,7 +16,7 @@
     <header>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-              <h1 class="display-4">Weather Dashboard</h1>
+              <h1 class="display-4">Your Weather Dashboard</h1>
               <p class="lead">Weather that's important to you</p>
             </div>
           </div>
@@ -25,24 +25,25 @@
         <div class= "nav-container">
             <nav class="navbar navbar-light bg-light">
                 <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <input class="form-control mr-sm-2" type="search" placeholder="Enter a City Name" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                 </form>
             </nav>
             <div class="list-group">
-                <button type="button" class="list-group-item list-group-item-action active">
-                Cras justo odio
-                </button>
-                <button type="button" class="list-group-item list-group-item-action">Dapibus ac facilisis in</button>
-                <button type="button" class="list-group-item list-group-item-action">Morbi leo risus</button>
-                <button type="button" class="list-group-item list-group-item-action">Porta ac consectetur ac</button>
-                <button type="button" class="list-group-item list-group-item-action" disabled>Vestibulum at eros</button>
+                <button type="button" class="list-group-item list-group-item-action"></button>
+                <button type="button" class="list-group-item list-group-item-action"></button>
+                <button type="button" class="list-group-item list-group-item-action"></button>
+                <button type="button" class="list-group-item list-group-item-action"></button>
+                <button type="button" class="list-group-item list-group-item-action"></button>
+                <button type="button" class="list-group-item list-group-item-action"></button>
+                <button type="button" class="list-group-item list-group-item-action"></button>
+                <button type="button" class="list-group-item list-group-item-action"></button>
             </div>
         </div>
         <div>
-            <div class="card" style="width: 18rem;">
+            <div class="card featured">
                 <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">City Name</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
@@ -50,35 +51,35 @@
             <div class="forecast-container">
                 <h2>Five Day Forecast:</h2>
                 <div class="forecast-cards">
-                    <div class="card" style="width: 9rem;">
+                    <div class="card daily" style="width: 9rem;">
                         <div class="card-body">
                         <h5 class="card-title" id="day1">Day 1</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Card subtSomitle</h6>
                         <p class="card-text"></p>
                         </div>
                     </div>
-                    <div class="card" style="width: 9rem;">
+                    <div class="card daily" style="width: 9rem;">
                         <div class="card-body">
                         <h5 class="card-title" id="day2">Day 2</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                         <p class="card-text"></p>
                         </div>
                     </div>
-                    <div class="card" style="width: 9rem;">
+                    <div class="card daily" style="width: 9rem;">
                         <div class="card-body">
                         <h5 class="card-title" id="day3">Day 3</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                         <p class="card-text"></p>
                         </div>
                     </div>
-                    <div class="card" style="width: 9rem;">
+                    <div class="card daily" style="width: 9rem;">
                         <div class="card-body">
                         <h5 class="card-title" id="day4">Day 4</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
                         <p class="card-text"></p>
                         </div>
                     </div>
-                    <div class="card" style="width: 9rem;">
+                    <div class="card daily" style="width: 9rem;">
                         <div class="card-body">
                         <h5 class="card-title" id="day5">Day 5</h5>
                         <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
