--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <header>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-              <h1 class="display-4">Your Weather Dashboard</h1>
-              <p class="lead">Weather that's important to you</p>
+              <h1 class="display-4 header-info">Your Weather Dashboard</h1>
+              <p class="lead header-info">Weather that's important to you</p>
             </div>
           </div>
     </header>
@@ -32,16 +32,8 @@
                   </svg></button>
                 </form>
             </nav>
-            <!-- <div class="list-group">
-                <button type="button" class="list-group-item list-group-item-action" id="button1"></button>
-                <button type="button" class="list-group-item list-group-item-action" id="button2"></button>
-                <button type="button" class="list-group-item list-group-item-action" id="button3"></button>
-                <button type="button" class="list-group-item list-group-item-action" id="button4"></button>
-                <button type="button" class="list-group-item list-group-item-action" id="button5"></button>
-                <button type="button" class="list-group-item list-group-item-action" id="button6"></button>
-                <button type="button" class="list-group-item list-group-item-action" id="button7"></button>
-                <button type="button" class="list-group-item list-group-item-action" id="button8"></button>
-            </div> -->
+            <div class="list-group button-div">
+            </div>
         </div>
         <div id="card-container">
             <div class="card featured">
@@ -62,40 +54,44 @@
             <div class="forecast-container">
                 <h2>Five Day Forecast:</h2>
                 <div class="forecast-cards">
-                    <div class="card daily" style="width: 9rem;">
+                    <div class="card daily">
                         <div class="card-body">
-                        <h5 class="card-title" id="date0"></h5>
-                        <img id="icon0"/>
-                        <p class="card-text" id="temp0"></p>
-                        <p class="card-text" id="humid0"></p>
+                            <h5 class="card-title" id="date0"></h5>
+                            <img id="icon0" class="icon"/>
+                            <p class="card-text" id="temp0"></p>
+                            <p class="card-text" id="humid0"></p>
                         </div>
                     </div>
-                    <div class="card daily" style="width: 9rem;">
+                    <div class="card daily">
                         <div class="card-body">
-                        <h5 class="card-title" id="day2">Day 2</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text"></p>
+                            <h5 class="card-title" id="date1"></h5>
+                            <img id="icon1" class="icon"/>
+                            <p class="card-text" id="temp1"></p>
+                            <p class="card-text" id="humid1"></p>
                         </div>
                     </div>
-                    <div class="card daily" style="width: 9rem;">
+                    <div class="card daily">
                         <div class="card-body">
-                        <h5 class="card-title" id="day3">Day 3</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text"></p>
+                            <h5 class="card-title" id="date2"></h5>
+                            <img id="icon2" class="icon"/>
+                            <p class="card-text" id="temp2"></p>
+                            <p class="card-text" id="humid2"></p>
                         </div>
                     </div>
-                    <div class="card daily" style="width: 9rem;">
+                    <div class="card daily">
                         <div class="card-body">
-                        <h5 class="card-title" id="day4">Day 4</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text"></p>
+                            <h5 class="card-title" id="date3"></h5>
+                            <img id="icon3" class="icon"/>
+                            <p class="card-text" id="temp3"></p>
+                            <p class="card-text" id="humid3"></p>
                         </div>
-                    </div>
-                    <div class="card daily" style="width: 9rem;">
+                     </div>
+                     <div class="card daily">
                         <div class="card-body">
-                        <h5 class="card-title" id="day5">Day 5</h5>
-                        <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                        <p class="card-text"></p>
+                            <h5 class="card-title" id="date4"></h5>
+                            <img id="icon4" class="icon"/>
+                            <p class="card-text" id="temp4"></p>
+                            <p class="card-text" id="humid4"></p>
                         </div>
                     </div>
                 </div>
