add functionality to buttons, simplified functions and added color to uv index depending on the scale

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                   </svg></button>
                 </form>
             </nav>
+            <h6>Search History</h6>
             <div class="list-group button-div">
             </div>
         </div>
@@ -45,14 +46,14 @@
                         <img id="weather-icon" alt="weather icon" class="hidden"/>
                         
                     </div>
-                    <h6 class="card-subtitle mb-2 text-muted" id="city-temp">Temperature:</h6>
-                    <h6 class="card-subtitle mb-2 text-muted" id="city-humid">Humidity:</h6>
-                    <h6 class="card-subtitle mb-2 text-muted" id="city-wind">Wind Speed: </h6>
-                    <h6 class="card-subtitle mb-2 text-muted" id="city-uv">UV Index:</h6>
+                    <h6 class="card-subtitle mb-2 text-muted" id="city-temp"></h6>
+                    <h6 class="card-subtitle mb-2 text-muted" id="city-humid"></h6>
+                    <h6 class="card-subtitle mb-2 text-muted" id="city-wind"></h6>
+                    <h6 class="card-subtitle mb-2 text-muted" id="city-uv"><span id="uv-num"></span></h6>
                 </div>
             </div>
             <div class="forecast-container">
-                <h2>Five Day Forecast:</h2>
+                <h2 >Five Day Forecast:</h2>
                 <div class="forecast-cards">
                     <div class="card daily">
                         <div class="card-body">
