the five day forecase section will now be hidden until a city is selected

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h6 class="card-subtitle mb-2 text-muted" id="city-uv"><span id="uv-num"></span></h6>
                 </div>
             </div>
-            <div class="forecast-container">
+            <div class="forecast-container hidden">
                 <h2 >Five Day Forecast:</h2>
                 <div class="forecast-cards">
                     <div class="card daily">
