added styling and prepopulated weather when app opens

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class = "body-container">
         <div class= "nav-container">
             <nav class="navbar navbar-light bg-light">
-                <form class="form-inline">
+                <form class="form-inline btn-background">
                 <input class="form-control mr-sm-2" type="search" placeholder="Enter a City Name" aria-label="Search" id="search-bar">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search-button">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
@@ -32,7 +32,6 @@
                   </svg></button>
                 </form>
             </nav>
-            <h6>Search History</h6>
             <div class="list-group button-div">
             </div>
         </div>
@@ -52,7 +51,7 @@
                     <h6 class="card-subtitle mb-2 text-muted" id="city-uv"><span id="uv-num"></span></h6>
                 </div>
             </div>
-            <div class="forecast-container hidden">
+            <div class="forecast-container">
                 <h2 >Five Day Forecast:</h2>
                 <div class="forecast-cards">
                     <div class="card daily">
