--- a/index.html
+++ b/index.html
@@ -10,22 +10,25 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
+    <link>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@500&family=Shrikhand&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="Assets/CSS/style.css">
 </head>
 <body>
     <header>
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-              <h1 class="display-4 header-info">Your Weather Dashboard</h1>
+              <h1 class="display-4 header-info" id="dashboard">Your Weather Dashboard</h1>
               <p class="lead header-info">Weather that's important to you</p>
             </div>
           </div>
     </header>
     <div class = "body-container">
         <div class= "nav-container">
-            <nav class="navbar navbar-light bg-light">
+            <nav class="navbar">
                 <form class="form-inline btn-background">
-                <input class="form-control mr-sm-2" type="search" placeholder="Enter a City Name" aria-label="Search" id="search-bar">
+                <input class="form-control mr-sm-2" type="search" placeholder="Enter a City" aria-label="Search" id="search-bar">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id="search-button">
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                     <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
